<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView android:id="@+id/noRerollText" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/noRerollText">
	</TextView>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<Button android:id="@+id/two_plus" android:layout_weight="1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/two_plus" android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true">
		</Button>
		<Button android:id="@+id/three_plus" android:layout_weight="1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/three_plus" android:layout_alignParentTop="true"
			android:layout_toRightOf="@+id/two_plus">
		</Button>
		<Button android:id="@+id/four_plus" android:layout_weight="1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/four_plus" android:layout_alignParentTop="true"
			android:layout_toRightOf="@+id/three_plus">
		</Button>
		<Button android:id="@+id/five_plus" android:layout_weight="1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/five_plus" android:layout_alignParentTop="true"
			android:layout_toRightOf="@+id/four_plus">
		</Button>

		<Button android:id="@+id/six_plus" android:layout_weight="1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/six_plus" android:layout_alignParentTop="true"
			android:layout_alignParentRight="true">
		</Button>

	</LinearLayout>

	<TextView android:id="@+id/blockDiceText"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:text="@string/blockDiceText">
	</TextView>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<Button android:id="@+id/blockDiceTwoDown"
			android:layout_weight="1" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/blockDiceTwoDown"
			android:layout_alignParentTop="true" android:layout_alignParentLeft="true">
		</Button>
		<Button android:id="@+id/blockDiceOneDown"
			android:layout_weight="1" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/blockDiceOneDown"
			android:layout_alignParentLeft="true">
		</Button>
		<Button android:id="@+id/blockDiceOne" android:layout_weight="1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/blockDiceOne" android:layout_alignParentLeft="true">
		</Button>
		<Button android:id="@+id/blockDiceTwo" android:layout_weight="1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/blockDiceTwo" android:layout_alignParentLeft="true">
		</Button>

		<Button android:id="@+id/blockDiceThree" android:layout_weight="1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/blockDiceThree" android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true">
		</Button>

	</LinearLayout>
	
	<TextView android:id="@+id/rerollText"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:text="@string/rerollText">
	</TextView>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<Button android:id="@+id/rerollOne"
			android:layout_weight="1" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/rerollOne"
			android:layout_alignParentTop="true" android:layout_alignParentLeft="true">
		</Button>
		<Button android:id="@+id/rerollTwo"
			android:layout_weight="1" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/rerollTwo"
			android:layout_alignParentLeft="true">
		</Button>
		<Button android:id="@+id/rerollThree" android:layout_weight="1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/rerollThree" android:layout_alignParentLeft="true">
		</Button>
		<Button android:id="@+id/rerollFour" android:layout_weight="1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/rerollFour" android:layout_alignParentLeft="true">
		</Button>

	</LinearLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:layout_weight="1">

		<TextView android:id="@+id/sequenceViewer"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="" android:textSize="20sp"
			android:layout_alignParentTop="true" android:layout_alignParentLeft="true">
		</TextView>

		<TextView android:id="@+id/probabilityResult"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="" android:textSize="22sp"
			android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
			android:gravity="center">
		</TextView>

	</LinearLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1">

		<Button android:id="@+id/calculateProbability"
			android:layout_weight="1" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:text="@string/calculateProbability">
		</Button>

		<Button android:id="@+id/clearList" android:layout_weight="3"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:text="@string/clearList">
		</Button>

	</LinearLayout>

</LinearLayout>